--- a/pom.xml
+++ b/pom.xml
@@ -203,6 +203,12 @@
                 <version>4.4.5</version>
             </dependency>
 
+            <!--pagehelper-->
+            <dependency>
+                <groupId>com.github.pagehelper</groupId>
+                <artifactId>pagehelper-spring-boot-starter</artifactId>
+                <version>1.2.13</version>
+            </dependency>
         </dependencies>
 
     </dependencyManagement>
